# LogUtilities

./: .gitignore  .travis.yml  CHANGES  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
.github/workflows/: build.yml
.travis/: before_install.sh
doc/: Doxyfile.in  Makefile.am  Makefile.in  groups.dox  index.dox  namespaces.dox
include/: .clang-format  Makefile.am  Makefile.in
include/LogUtilities/: LogChain.hpp  LogFilter.hpp  LogFilterAlways.hpp  LogFilterBase.hpp  LogFilterBoolean.hpp  LogFilterChain.hpp  LogFilterLevel.hpp  LogFilterNever.hpp  LogFilterQuiet.hpp  LogFormatter.hpp  LogFormatterBase.hpp  LogFormatterPlain.hpp  LogFormatterStamped.hpp  LogFunctionUtilities.hpp  LogGlobals.hpp  LogIndenter.hpp  LogIndenterBase.hpp  LogIndenterNone.hpp  LogIndenterSpace.hpp  LogIndenterString.hpp  LogIndenterTab.hpp  LogLogger.hpp  LogMacros.hpp  LogMemoryUtilities.hpp  LogTypes.hpp  LogUtilities.hpp  LogUtilitiesConfig.h.in  LogWriter.hpp  LogWriterASL.hpp  LogWriterBase.hpp  LogWriterChain.hpp  LogWriterDescriptor.hpp  LogWriterPath.hpp  LogWriterStderr.hpp  LogWriterStdio.hpp  LogWriterStdout.hpp  LogWriterSyslog.hpp
src/: .clang-format  LogFilterAlways.cpp  LogFilterBase.cpp  LogFilterBoolean.cpp  LogFilterChain.cpp  LogFilterLevel.cpp  LogFilterNever.cpp  LogFilterQuiet.cpp  LogFormatterBase.cpp  LogFormatterPlain.cpp  LogFormatterStamped.cpp  LogFunctionUtilities.cpp  LogGlobals.cpp  LogIndenterBase.cpp  LogIndenterNone.cpp  LogIndenterSpace.cpp  LogIndenterString.cpp  LogIndenterTab.cpp  LogLogger.cpp  LogMemoryUtilities.cpp  LogWriterASL.cpp  LogWriterBase.cpp  LogWriterChain.cpp  LogWriterDescriptor.cpp  LogWriterPath.cpp  LogWriterStderr.cpp  LogWriterStdio.cpp  LogWriterStdout.cpp  LogWriterSyslog.cpp  Makefile.am  Makefile.in
tests/: Makefile.am  Makefile.in  TestDriver.cpp  TestLogChain.cpp  TestLogFilterAlways.cpp  TestLogFilterBoolean.cpp  TestLogFilterChain.cpp  TestLogFilterLevel.cpp  TestLogFilterNever.cpp  TestLogFilterQuiet.cpp  TestLogFormatterPlain.cpp  TestLogFormatterStamped.cpp  TestLogFunctionUtilities.cpp  TestLogGlobals.cpp  TestLogIndenterNone.cpp  TestLogIndenterSpace.cpp  TestLogIndenterString.cpp  TestLogIndenterTab.cpp  TestLogLogger.cpp  TestLogMacros.cpp  TestLogMemoryUtilities.cpp  TestLogUtilitiesBasis.cpp  TestLogUtilitiesBasis.hpp  TestLogWriterChain.cpp  TestLogWriterDescriptor.cpp  TestLogWriterPath.cpp  TestLogWriterStderr.cpp  TestLogWriterStdio.cpp  TestLogWriterStdout.cpp  TestLogWriterSyslog.cpp
